--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -1,11 +1,21 @@
+/* Universal Selector  */
 * {
     box-sizing: border-box;
     padding: 0;
     margin: 0;
 }
-
+/* Element Selectors  */
 body {
     background-color: #d9dcd6;
+}
+
+a {
+    color: #ffffff;
+    text-decoration: none;
+}
+
+p {
+    font-size: 16px;
 }
 
 header {
@@ -18,10 +28,6 @@ header {
 header h1 {
     display: inline-block;
     font-size: 48px;
-}
-
-.seo {
-    color: #d9dcd6;
 }
 
 header nav {
@@ -38,34 +44,6 @@ header nav ul {
 
 header nav ul li {
     display: inline-block;
-    margin-left: 25px;
-}
-
-a {
-    color: #ffffff;
-    text-decoration: none;
-}
-
-p {
-    font-size: 16px;
-}
-
-.hero {
-    height: 800px;
-    width: 100%;
-    margin-bottom: 25px;
-    background-image: url("../images/digital-marketing-meeting.jpg");
-    background-size: cover;
-    background-position: center;
-}
-
-.float-left {
-    float: left;
-    margin-right: 25px;
-}
-
-.float-right {
-    float: right;
     margin-left: 25px;
 }
 
@@ -93,7 +71,7 @@ main img {
     max-height: 200px;
 }
 
-.benefits {
+aside {
     margin-right: 20px;
     padding: 20px;
     clear: both;
@@ -104,17 +82,17 @@ main img {
     background-color: #2589bd;
 }
 
-.benefits div {
+aside div {
     margin-bottom: 32px;
     color: #ffffff;  
 }
 
-.benefits h3 {
+aside h3 {
     margin-bottom: 10px;
     text-align: center;
 }
 
-.benefits img {
+aside img {
     display: block;
     margin: 10px auto;
     max-width: 150px;
@@ -130,3 +108,29 @@ footer {
 footer h2 {
     font-size: 20px;
 }
+
+/* id Selectors  */
+#seo {
+    color: #d9dcd6;
+}
+
+#hero {
+    height: 800px;
+    width: 100%;
+    margin-bottom: 25px;
+    background-image: url("../images/digital-marketing-meeting.jpg");
+    background-size: cover;
+    background-position: center;
+}
+
+/* Class Selectors  */
+.float-left {
+    float: left;
+    margin-right: 25px;
+}
+
+.float-right {
+    float: right;
+    margin-left: 25px;
+}
+
